--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,12 @@
 <html lang="en">
 
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- responsive design on mobile -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    {% block meta %}
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <!-- responsive design on mobile -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% endblock %}
 
     <!-- Page title -->
     <title>Pawgress
@@ -29,14 +30,10 @@
 
   <body>
     <!-- Fixed top header -->
-    <header class="containre-fluid fixed-top"></header>
-   
-    <main class="container mt-5 pt-5">
-        {% block content %}{% endblock %}
-    </main>
+    <header class="container-fluid fixed-top"></header>
 
     <!-- Django messages -->
-     <div class="container mt-3">
+    <div class="container mt-3">
         {% if messages %}
             <div class="message-container">
                 {% for message in messages %}
@@ -44,14 +41,21 @@
                 {% endfor %}
             </div>
         {% endif %}
-     </div>
+    </div>
+    
+    <main class="container mt-5 pt-5">
+        {% block page_header %}{% endblock %}
+        {% block content %}{% endblock %}
+    </main>
+
+    <footer class="container mt-5 pt-4 border-top text-center"></footer>
 
      <!-- Bootstrap core JS -->
       {% block corejs %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     {% endblock %}
 
-    <!-- Extra JavaScript for other pages -->
-     {% block extrajs %}{% endblock %}
+    <!-- This runs after everything else -->
+     {% block postloadjs %}{% endblock %}
   </body>
 </html>
