Add About Us section and social media links to homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,11 +4,29 @@
 <!-- Header -->
 {% block page_header %}
 <div class="container-fluid header-container d-flex align-items-center justify-content-end h-100">
-        <div class="text-end me-5">
-            <h1 class="display-2 logo-font text-black mt-5">Train Smarter, Not Harder</h1>
-            <div class="my-3">
-                <a href="#" class="btn btn-lg rounded-0 text-uppercase py-3 browse-courses-button">Browse Courses</a>
-            </div>
+    <div class="text-end me-5">
+        <h1 class="display-2 logo-font text-black mt-5">Train Smarter, Not Harder</h1>
+        <div class="my-3">
+            <a href="#" class="btn btn-lg rounded-0 text-uppercase py-3 border border-black border-1 browse-courses-button">Browse Courses</a>
+        </div>
+        <br>
+        <!-- About Us -->
+        <div class="text-start mt-5 about-us-section">
+            <h3 class="mb-3"><strong>About Pawgress</strong></h3>
+            <p>
+              At Pawgress, we believe every dog deserves the chance to thrive.
+              Our expertly designed training courses help dog owners build trust,
+              confidence, and lifelong skills, one paw at a time.
+            </p>
+            <p>
+              Whether you're raising a puppy, working with a rescue, or fine-tuning
+              advanced behaviors, we're here to guide you through every step of your journey.
+            </p>
+            <br>
+            <a href="https://www.facebook.com/" target="_blank" aria-label="Visit our Facebook page"><i class="fa-brands fa-facebook me-3 fa-2x social-icons"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" aria-label="Visit our Instagram page"><i class="fa-brands fa-instagram me-3 fa-2x social-icons"></i></a>
+            <a href="https://x.com/?lang=en" target="_blank" aria-label="Visit our X page"><i class="fa-brands fa-x-twitter me-3 fa-2x social-icons"></i></a>
         </div>
     </div>
+</div>
 {% endblock %}
