Add mobile header and main navbar

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,3 +1,5 @@
+<!-- Initial code grabbed from Boutique Ado wt project, modified to fit Pawgress -->
+
 {% extends "base.html" %}
 {% load static %}
 
