--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,6 +3,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block body_class %}home-page{% endblock %}
+
 <!-- Header -->
 {% block page_header %}
 <div class="container-fluid header-container d-flex align-items-center justify-content-end h-100">
