--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
     {% endblock %}
   </head>
 
-  <body>
+  <body class="{% block body_class %}{% endblock %}">
     <!-- Fixed top header -->
     <header class="container-fluid fixed-top bg-white py-2 py-lg-3">
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
