--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,7 +11,7 @@
     <div class="text-end me-5">
         <h1 class="display-2 logo-font text-black mt-5">Train Smarter, Not Harder</h1>
         <div class="my-3">
-            <a href="#" class="btn btn-lg rounded-0 text-uppercase py-3 border border-black border-1 browse-courses-button">Browse Courses</a>
+            <a href="{% url 'courses' %}" class="btn btn-lg rounded-0 text-uppercase py-3 border border-black border-1 browse-courses-button">Browse Courses</a>
         </div>
         <br>
         <!-- About Us -->
