--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -3,8 +3,13 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a href="#" class="logo-font fw-bold nav-link text-black me-5" id="all-courses-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a href="{% url 'courses' %}" class="logo-font fw-bold nav-link text-black me-5" id="bundles-link">
                 All Courses
+            </a>
+        </li>
+        <li class="nav-item dropdown">
+            <a href="#" class="logo-font fw-bold nav-link text-black me-5" id="all-courses-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Courses by Category
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-courses-link">
                 <a href="" class="dropdown-item py-2 px-4">Puppy Training</a>
