--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -3,15 +3,15 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a href="{% url 'courses' %}" class="logo-font fw-bold nav-link text-black me-5" id="bundles-link">
+            <a href="{% url 'courses' %}" class="main-nav-link logo-font fw-bold nav-link me-5" id="all-courses-link">
                 All Courses
             </a>
         </li>
         <li class="nav-item dropdown">
-            <a href="#" class="logo-font fw-bold nav-link text-black me-5" id="all-courses-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a href="#" class="main-nav-link logo-font fw-bold nav-link me-5" id="courses-by-category-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Courses by Category
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-courses-link">
+            <div class="dropdown-menu border-0" aria-labelledby="courses-by-category-link">
                 <a href="" class="dropdown-item py-2 px-4">Puppy Training</a>
                 <a href="" class="dropdown-item py-2 px-4">Basic Obidience</a>
                 <a href="" class="dropdown-item py-2 px-4">Reactivity & Behavior</a>
@@ -21,13 +21,13 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a href="#" class="logo-font fw-bold nav-link text-black me-5" id="bundles-link">
+            <a href="#" class="main-nav-link logo-font fw-bold nav-link me-5" id="bundles-link">
                 Course Bundles
             </a>
         </li>
 
         <li class="nav-item dropdown">
-            <a href="#" class="logo-font fw-bold nav-link text-black me-5" id="team-link">
+            <a href="#" class="main-nav-link logo-font fw-bold nav-link me-5" id="team-link">
                 Meet The Team
             </a>
         </li>
