--- a/templates/base.html
+++ b/templates/base.html
@@ -34,13 +34,13 @@
 
   <body class="{% block body_class %}{% endblock %}">
     <!-- Fixed top header -->
-    <header class="container-fluid fixed-top bg-white py-2 py-lg-3">
-        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+    <header class="container-fluid fixed-top bg-black py-2 py-lg-3">
+        <div id="topnav" class="row bg-black pt-lg-2 d-none d-lg-flex">
             <!-- Site logo -->
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-start ps-3">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
                     <h1 class="logo-font text-black my-0 mt-2">
-                        <i class="fa-solid fa-paw text-black me-1"></i> <strong>Pawgress</strong>
+                        <i class="fa-solid fa-paw text-white me-1"> </i><strong class="text-white">Pawgress</strong>
                     </h1>
                 </a>
             </div>
@@ -48,8 +48,8 @@
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <form action="" method="GET">
                     <div class="input-group w-100">
-                        <input type="text" class="form-control border border-black rounded-0" name="q" placeholder="Find the pawfect course...">
-                        <button class="btn search-btn border-black rounded-0 px-4" type="submit">
+                        <input type="text" class="form-control border border-white rounded-0" name="q" placeholder="Find the pawfect course...">
+                        <button class="btn search-btn border-white rounded-0 px-4" type="submit">
                             <i class="fa-solid fa-magnifying-glass fa-lg"></i>
                         </button>
                     </div>
@@ -61,7 +61,7 @@
                     
                     <!-- Account dropdown -->
                     <li class="list-inline-item dropdown">
-                    <a class="text-black nav-link" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="text-white nav-link" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <div class="d-flex flex-column align-items-center">
                             <i class="fa-solid fa-user"></i>
                             <p class="my-0">Account</p>
@@ -83,7 +83,7 @@
                     
                     <!-- Cart -->
                     <li class="list-inline-item me-3">
-                        <a class="{% if grand_total %}text-info fw-bold{% else %}text-black{% endif %} nav-link" href="">
+                        <a class="{% if grand_total %}text-info fw-bold{% else %}text-white{% endif %} nav-link" href="">
                             <div class="text-center">
                                 <div><i class="fa-solid fa-cart-shopping"></i></div>
                                 <p class="my-0">
@@ -101,7 +101,7 @@
         </div>
 
         <!-- Code grabbed from bootstrap docs, modified based on Boutique Ado wt project -->
-        <div class="row bg-white">
+        <div class="row bg-black">
             <nav class="navbar navbar-expand-lg navbar-light w-100 px-3 py-0">
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
