--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,9 +1,9 @@
 <!-- Initial code grabbed from bootstrap & Boutique Ado wt project, modified to fit Pawgress -->
 <ul class="list-inline d-flex justify-content-end align-items-center mb-0 ms-auto gap-3 d-lg-none">
     <li class="list-inline-item">
-        <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="text-white nav-link d-block d-lg-none" href="#" id="mobile-search" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <div class="text-center">
-                <div><i class="fas fa-search fa-lg"></i></div>
+                <div><i class="fa-solid fa-magnifying-glass fa-lg"></i></div>
                 <p class="my-0">Search</p>
             </div>
         </a>
@@ -25,7 +25,7 @@
 
     <!-- Account and cart -->
     <li class="list-inline-item dropdown">
-        <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="text-white nav-link d-block d-lg-none" href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <div class="text-center">
                 <div><i class="fa-solid fa-user fa-lg"></i></div>
                 <p class="my-0">Account</p>
@@ -49,7 +49,7 @@
 
     <!-- Cart subtotal -->
     <li class="list-inline-item">
-        <a class="{% if grand_total %}text-black fw-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="">
+        <a class="{% if grand_total %}text-black fw-bold{% else %}text-white{% endif %} nav-link d-block d-lg-none" href="">
             <div class="text-center">
                 <div><i class="fa-solid fa-cart-shopping"></i></div>
                 <p class="my-0">
