--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
             </div>
             <!-- Searchbar -->
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <form action="" method="GET">
+                <form action="{% url 'courses' %}" method="GET">
                     <div class="input-group w-100">
                         <input type="text" class="form-control border border-white rounded-0" name="q" placeholder="Find the pawfect course...">
                         <button class="btn search-btn border-white rounded-0 px-4" type="submit">
