--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
                     
                     <!-- Cart -->
                     <li class="list-inline-item me-3">
-                        <a class="{% if grand_total %}text-info fw-bold{% else %}text-white{% endif %} nav-link" href="">
+                        <a class="{% if grand_total %}text-info fw-bold{% else %}text-white{% endif %} nav-link" href="{% url 'view_cart' %}">
                             <div class="text-center">
                                 <div><i class="fa-solid fa-cart-shopping"></i></div>
                                 <p class="my-0">
@@ -141,6 +141,7 @@
     {% block corejs %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://kit.fontawesome.com/2b7435e410.js" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     {% endblock %}
 
     <!-- This runs after everything else -->
