--- a/courses/templates/courses/courses.html
+++ b/courses/templates/courses/courses.html
@@ -35,8 +35,15 @@
                                   <a href="{% url 'course_detail' course.id %}"><h3 class="card-title">{{ course.title }}</h3></a>
                                   <p class="card-text">{{ course.description }}</p>
                                 </div>
-                                <div class="card-footer">
-                                    <h5>€{{ course.price }}</h5>
+                                <div class="card-footer d-flex justify-content-between align-items-center pb-3">
+                                    <h5 class="mb-0">€{{ course.price }}</h5>
+                                    <form action="{% url 'add_to_cart' course.id %}" method="POST">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                        <button type="submit" class="add-to-cart-link text-uppercase btn border border-1 border-black">
+                                            Add to cart
+                                        </button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
